components/security/kyverno/cilium-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno
  namespace: kyverno
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kyverno
  ingress:
    # Admission webhook calls from kube-apiserver
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
        - cluster
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
    # Health and liveness probes
    - fromEntities:
        - host
        - remote-node
        - health
        - cluster
  egress:
    # DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    # Kubernetes API Server
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # OCI image registries and signature verification
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
